fix color and spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,6 @@
 
 * { 
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
